# RAG_upload_documents_and_chat_with_LLM

./: .gitignore  Dockerfile  README.md  app.py  app.yaml  docker-compose.yml  exec.py  pyproject.toml
src/chatllmrag/rag/: Config.py  Uploader.py  Vector_DB_DAO.py  chain.py  models.py  retriever.py
tests/: test.py
